[package]
name = "async-ssh2-tokio"
version = "0.1.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2018"
description = "Asynchronous ssh2 using Tokio"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/khvzak/async-ssh2-tokio"
homepage = "https://github.com/khvzak/async-ssh2-tokio"
documentation = "https://docs.rs/async-ssh2-tokio"
keywords = ["SSH", "SSH2"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[dependencies]
ssh2 = { version = "0.9", default-features = false, features = [] }
tokio = { version = "1", features = ["net", "time"] }

[features]
vendored-openssl = ["ssh2/vendored-openssl"]

# [workspace]
# members = [
#     "demos/smol",
# ]
